@@ -1,0 +1,55 @@
+AT_SETUP([db rebuild])
+MONOTONE_SETUP
+
+# This test is a bug report.
+AT_XFAIL_IF(true)
+
+# 'db rebuild' current generates invalid root revisions.  They say
+# that they have no changes, when in fact they should have should have
+# a bunch of add_file's on them.
+
+# Make sure 'db rebuild' does something reasonable.
+
+ADD_FILE(foo, [blha blah
+])
+ADD_FILE(bar, [asdfasd
+])
+ADD_FILE(baz, [8303
+])
+ADD_FILE(quux, [booga booga
+])
+COMMIT(testbranch)
+
+AT_CHECK(mv quux renamed-quux)
+AT_CHECK(MONOTONE rename quux renamed-quux, [], [ignore], [ignore])
+ADD_FILE(otherthingie, [basdf
+])
+AT_CHECK(MONOTONE drop bar, [], [ignore], [ignore])
+COMMIT(testbranch)
+
+AT_CHECK(cp baz baz.original)
+SET_FILE(baz, [otherstuff
+])
+COMMIT(otherbranch)
+
+# Rebuild
+AT_CHECK(MONOTONE db rebuild, [], [ignore], [ignore])
+
+# Verify stuff is the same
+AT_CHECK(MONOTONE checkout --branch=testbranch tb, [], [ignore], [ignore])
+
+AT_CHECK(cmp foo tb/foo)
+AT_CHECK(test ! -e tb/bar)
+AT_CHECK(cmp baz.original tb/baz)
+AT_CHECK(cmp renamed-quux tb/renamed-quux)
+AT_CHECK(cmp otherthingie tb/otherthingie)
+
+AT_CHECK(MONOTONE checkout --branch=otherbranch ob, [], [ignore], [ignore])
+
+AT_CHECK(cmp foo ob/foo)
+AT_CHECK(test ! -e ob/bar)
+AT_CHECK(cmp baz ob/baz)
+AT_CHECK(cmp renamed-quux ob/renamed-quux)
+AT_CHECK(cmp otherthingie ob/otherthingie)
+
+AT_CLEANUP
