@@ -423,3 +423,4 @@ m4_include(tests/t_no_rename_overwrite.at)
 m4_include(tests/t_checkout_noop_on_fail.at)
 m4_include(tests/t_monotone_agent.at)
 m4_include(tests/t_approval_semantics.at)
+m4_include(tests/t_rebuild.at)
