@@ -1,5 +1,10 @@
 2005-01-26  Nathaniel Smith  <njs@codesourcery.com>
 
+	* tests/t_rebuild.at: New test.
+	* testsuite.at: Add it.
+
+2005-01-26  Nathaniel Smith  <njs@codesourcery.com>
+
 	* tests/t_checkout_noop_on_fail.at: Clarify description and XFAIL.
 
 	* tests/t_approval_semantics.at: New TODO.
